src/objects/Classroom_Course__c.object
<CustomObject>
    <description>PRM-LMS Classroom Course - a custom object to store LMS classroom course attendance</description>
    <fields>
        <fullName>Classroom_enrollment_ID__c</fullName>
        <description>PRM-LMS Reporting-this field contains the ID of the Classroom course in LMS</description>
        <externalId>true</externalId>
        <label>Classroom enrollment ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Classroom_label__c</fullName>
        <description>PRM-LMS Reporting-this field contains the label of the classroom course</description>
        <label>Classroom label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>PRM-LMS Reporting-this field contains the duration of the learning session sent by LMS</description>
        <label>Duration</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_status__c</fullName>
        <description>PRM-LMS Reporting-this field contains the enrollment status to the session sent by LMS</description>
        <label>Enrollment status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Classroom_Course_URL__c</fullName>
        <description>PRM-LMS Reporting-this field contain the URL to the Classroom record in LMS</description>
        <label>LMS Classroom Course URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Learning_Path_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning Path ID</label>
        <referenceTo>Learning_Path__c</referenceTo>
        <relationshipLabel>Classroom Courses</relationshipLabel>
        <relationshipName>Classroom_Courses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_address__c</fullName>
        <description>PRM-LMS Reporting-this field contains the location of the classroom session sent by LMS</description>
        <label>Location address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PRM-LMS Reporting-this field contains Salesforce Product ID</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Classroom Courses</relationshipLabel>
        <relationshipName>Classroom_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PRM-LMS Reporting - This field contains Salesforce User ID of PRM user</description>
        <label>Salesforce User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Classroom_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_end_date_Time__c</fullName>
        <description>PRM-LMS Reporting-This field contains the scheduled end date of the classroom session in LMS</description>
        <label>Scheduled end date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_end_date__c</fullName>
        <label>Scheduled end date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_start_date_Time__c</fullName>
        <label>Scheduled start date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_start_date__c</fullName>
        <label>Scheduled start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Classroom Course</label>
    <nameField>
        <displayFormat>CRS-{0000}</displayFormat>
        <label>Classroom Course Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classroom Courses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>